tests/integration/fail/dictionary_contract_propagates_through_merge.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
%force% (({ foo } | { _ | Number }) & { foo = "string" }) true